xdp_frame01_checksum: Answer overhead cost of missing HW checksum
Based on the measurements answer question.

Signed-off-by: Jesper Dangaard Brouer <brouer@redhat.com>

--- a/areas/core/xdp_frame01_checksum.org
+++ b/areas/core/xdp_frame01_checksum.org
@@ -107,6 +107,11 @@ for the baseline XDP (DROP) use-cases that don't use/want this feature.
 
 Quantify: What is the overhead of this missing HW checksum indication?
 
+Answer: Based on tests below for 1500 bytes packets:
+ - UdpNoPorts-test isolate checksum overhead cost to 91.79 ns
+ - Combining csum-with-copy gives overhead cost of 54.28 ns
+ - Possible explanation: UdpNoPorts-test don't read packet payload
+
 ** UDP checksum overhead: UdpNoPorts drop case
 
 UDP packets can opt-out of checksumming by setting the checksum filed to
