--- a/areas/mem/page_pool06_alloc_pages_bulk.org
+++ b/areas/mem/page_pool06_alloc_pages_bulk.org
@@ -300,7 +300,7 @@ the alloc_pages_bulk API (3,677,958 pps -> 4,368,926 pps).
 #+end_quote
 
 
-* Test on Mel git-tree
+* Test on Mel git-tree: mm-bulk-rebase-v4r2
 
 Tests based on Mel Gorman's git tree:
  - git://git.kernel.org/pub/scm/linux/kernel/git/mel/linux.git
@@ -381,6 +381,47 @@ rx_queue_index    0:1   3,810,013   0
 rx_queue_index    0:sum 3,810,013  
 #+end_example
 
+* Test on Mel git-tree: mm-bulk-rebase-v5r9
+
+Tests based on Mel Gorman's git tree:
+ - git://git.kernel.org/pub/scm/linux/kernel/git/mel/linux.git
+ - Branch: mm-bulk-rebase-v5r9
+
+** micro-benchmark: page_bench04_bulk
+
+Notice these "per elem" measurements are alloc+free cost for order-0 pages
+
+page_bench04_bulk micro-benchmark on branch: mm-bulk-rebase-v5r9
+ - https://lore.kernel.org/netdev/20210322130446.0a505db0@carbon/
+
+#+begin_example
+BASELINE
+ single_page alloc+put: Per elem: 199 cycles(tsc) 55.472 ns
+
+LIST variant: time_bulk_page_alloc_free_list: step=bulk size
+
+ Per elem: 206 cycles(tsc) 57.478 ns (step:1)
+ Per elem: 154 cycles(tsc) 42.861 ns (step:2)
+ Per elem: 145 cycles(tsc) 40.536 ns (step:3)
+ Per elem: 142 cycles(tsc) 39.477 ns (step:4)
+ Per elem: 142 cycles(tsc) 39.610 ns (step:8)
+ Per elem: 137 cycles(tsc) 38.155 ns (step:16)
+ Per elem: 135 cycles(tsc) 37.739 ns (step:32)
+ Per elem: 134 cycles(tsc) 37.282 ns (step:64)
+ Per elem: 133 cycles(tsc) 36.993 ns (step:128)
+
+ARRAY variant: time_bulk_page_alloc_free_array: step=bulk size
+
+ Per elem: 202 cycles(tsc) 56.383 ns (step:1)
+ Per elem: 144 cycles(tsc) 40.047 ns (step:2)
+ Per elem: 134 cycles(tsc) 37.339 ns (step:3)
+ Per elem: 128 cycles(tsc) 35.578 ns (step:4)
+ Per elem: 120 cycles(tsc) 33.592 ns (step:8)
+ Per elem: 116 cycles(tsc) 32.362 ns (step:16)
+ Per elem: 113 cycles(tsc) 31.476 ns (step:32)
+ Per elem: 110 cycles(tsc) 30.633 ns (step:64)
+ Per elem: 110 cycles(tsc) 30.596 ns (step:128)
+#+end_example
 
 * Micro optimisations
 
