--- a/areas/mem/page_pool06_alloc_pages_bulk.org
+++ b/areas/mem/page_pool06_alloc_pages_bulk.org
@@ -4,13 +4,6 @@
 
 Testing experimental patch from Mel Gorman that add alloc_pages_bulk() API.
 
-This patch: https://lore.kernel.org/linux-mm/20210210130705.GC3629@suse.de/
-With this fix: https://lore.kernel.org/linux-mm/20210211091235.GC3697@techsingularity.net/
-
-Notice new patchset from Mel:
- - Message-Id: <20210224102603.19524-1-mgorman@techsingularity.net>
- - https://lore.kernel.org/netdev/20210224102603.19524-1-mgorman@techsingularity.net/
-
 * Use-case: page_pool
 
 The =alloc_pages_bulk()= use-case for page_pool is in
@@ -126,6 +119,9 @@ Samples: 81K of event 'cycles', Event count (approx.): 73929158590
 Kernel: Linux broadwell 5.11.0-net-next-alloc_pages_bulk+
 - With this fix [[https://patchwork.kernel.org/project/netdevbpf/patch/161402344429.1980160.4798557236979159924.stgit@firesoul/][to mlx5 driver]]
 
+This patch: https://lore.kernel.org/linux-mm/20210210130705.GC3629@suse.de/
+With this fix: https://lore.kernel.org/linux-mm/20210211091235.GC3697@techsingularity.net/
+
 ** test01: veth redirect (page_pool bulk 16)
 
 Same veth setup as above: [[#test-setup-for-veth][setup]]
@@ -210,7 +206,7 @@ rx_queue_index    0:sum 4,297,649
 
 * Test with RFC patchset
 
-Test with new patchset from Mel:
+Test with new patchset from Mel
  - Message-Id: <20210224102603.19524-1-mgorman@techsingularity.net>
  - https://lore.kernel.org/netdev/20210224102603.19524-1-mgorman@techsingularity.net/
 
