--- a/areas/mem/page_pool06_alloc_pages_bulk.org
+++ b/areas/mem/page_pool06_alloc_pages_bulk.org
@@ -768,6 +768,22 @@ rx_queue_index    0:sum 4,014,402
         24.221.557      icache.ifdata_stall                                           ( +-  0,41% )  (61,54%)
 #+end_example
 
+Another test, and perf stat with reduced PMU events (at 4,051,499 pps):
+#+begin_example
+$ perf stat -C5 -e cycles -e  instructions -e branches:k -e branch-misses:k -e l2_rqsts.all_code_rd -e l2_rqsts.code_rd_hit -e l2_rqsts.code_rd_miss -e icache.hit -e icache.misses -e icache.ifdata_stall -r 4 sleep 1
+
+     3.804.088.394      cycles                                                        ( +-  0,02% )
+     9.078.500.414      instructions              #    2,39  insn per cycle           ( +-  0,09% )
+     1.722.383.884      branches:k                                                    ( +-  0,07% )
+         3.740.082      branch-misses:k           #    0,22% of all branches          ( +-  1,54% )
+         4.763.321      l2_rqsts.all_code_rd                                          ( +-  0,89% )
+         4.174.932      l2_rqsts.code_rd_hit                                          ( +-  1,00% )
+           588.384      l2_rqsts.code_rd_miss                                         ( +-  0,44% )
+       879.129.268      icache.hit                                                    ( +-  0,04% )
+         1.774.102      icache.misses                                                 ( +-  0,54% )
+        17.786.226      icache.ifdata_stall                                           ( +-  0,18% )
+#+end_example
+
 ** Strange code layout
 
 Kernel: 5.12.0-rc4-mel-mm-bulk-rebase-v6r5-jesper05-array+
